<resources>
    <string name="app_name">Emailclient Beta</string>
    <string name="settings_title">Settings</string>
    <string name="menu_item_inbox">Inbox</string>
    <string name="menu_item_sent">Sent</string>
    <string name="menu_item_spam">Spam</string>
    <string name="menu_item_trash">Trash</string>
    <string name="menu_item_new_mail">New mail</string>
    <string name="menu_item_drafts">Drafts</string>
    <string name="menu_item_exit">Exit</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="submenu_tittle">Additionally</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_login_server">Server</string>
    <string name="text_login_password">Password</string>
    <string name="text_login_login">Login</string>
    <string name="text_login_logout">Logout</string>
    <string name="text_login_port">Port</string>
    <string name="toast_pls_login">Enter login, password, server and port</string>
    <string name="toast_save_settings">Settings was saved...</string>
    <string name="toast_delete_settings">Settings was deleted...</string>
    <string name="text_header_welcome">Your are sing in as:</string>
    <string name="text_header_user">nobody</string>
    <string name="subject">Subject:</string>
    <string name="time">00:00</string>
    <string name="folder_inbox">Inbox:</string>
    <string name="email">user@mail.com</string>
    <string name="error_email">This email address is invalid</string>
    <string name="error_password">This password is invalid</string>
    <string name="default_from">From:</string>
    <string name="default_subject">Subject:</string>
    <string name="default_body">Message:</string>
    <string name="reply">Reply</string>


</resources>
