<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/check_mail"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginRight="5dp"
        android:focusable="false"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/mail_from"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:focusable="false"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/text_header_user"
                android:textSize="15dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/mail_subject"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:focusable="false"
                android:maxLength="50"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/subject"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/mail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:focusable="false"
                android:text="@string/time" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>